test-utils/tests/ui/too-many-func-parameters.stderr
error: No arguments expected for tests.
  --> $DIR/too-many-func-parameters.rs:20:1
   |
20 | async fn too_many_func_parameters(_: u32) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
